examples/good/16_1_break_continue.soy
a = 0;

while (True) {
    a = a + 1;
    if (a == 3) {
        break;
    }
    print(a);
}

for (i = 1 to 4) {
    if (i mod 2 == 0) {
        continue;
    }
    print(i);
}

print("16_1_PASSED");