examples/bad/for_mutable_var.soy
for (i = 0 to 10) {
    i = i + 1; # ERROR: variable in for is read_only